# fast-api-app

./: .gitignore  README.md  pyproject.toml  test_connection.py
app/: database.py  main.py  models.py  routes.py
