[project]
name = "todo-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
]
